feature(etablissements): Ajout de fonctionnalités